Adjust cake and text positioning to prevent overlap with enlarged cake

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 #cake {
   display: block;
   position: relative;
-  margin: -10em auto 0 auto;
+  margin: -14em auto 0 auto;
   transform: scale(1.3);
 }
 
@@ -127,6 +127,7 @@ body {
   font-weight: 300;
   font-style: italic;
   text-align: center;
+  margin-top: 60px;
 }
 .text h1 {
   font-size: 1.4em;
@@ -136,7 +137,7 @@ body {
   color: #d1d1d1;
   font-family: "Lato", sans-serif;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 40px;
   font-size: 0.9em;
   opacity: 0;
   -webkit-animation: fadeInInstruction 1s 7s ease-out forwards;
